# gridify

./: .gitignore  CMakeLists.txt  conanfile.txt  radii.json
common/: CMakeLists.txt
common/include/common/: cmdline.inc  common.h  pdb.h  processing.h  radius.h
common/src/: pca.cpp  pdb.cpp
core/: CMakeLists.txt
core/include/core/: aabb_tree.hpp  cmdline.inc  common.h  grid.h  pca.h  pdb.h  points_checker.h  processing.h  radius.h  score.h  sitefind.h
core/src/: grid.cpp  pca.cpp  pdb.cpp  score.cpp  sitefind.cpp
gridify/: CMakeLists.txt  aabb_tree.hpp  common.hpp  main.cpp  principal_lengths.cpp
python/: CMakeLists.txt  evaluate_dude_mt.py  gridify.cpp
scorer/: CMakeLists.txt  alpha_shape.cpp  scorer.cpp  union_of_balls.cpp
sitefind/: CMakeLists.txt  sitefind.cpp
